# turndown-node

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  REFACTORING_PLAN.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: benchmark.js  generate-fixtures.js  package.json
benchmarks/fixtures/: blog-post.html  documentation.html  huge.html  large-100kb.html  large-article.html  large.html  medium.html  simple.html  small.html
crates/turndown/: Cargo.toml
crates/turndown-cdp/: Cargo.toml  README.md
crates/turndown-cdp/src/: convert.rs  lib.rs  service.rs
crates/turndown-cdp/src/rules/: rule.rs
crates/turndown-core/: Cargo.toml  README.md
crates/turndown-core/src/: ast.rs  lib.rs  options.rs  serialize.rs
crates/turndown-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/turndown-napi/src/: lib.rs  lol_streaming.rs  streaming.rs  tl_streaming.rs
crates/turndown/src/: html.rs  lib.rs  node.rs  service.rs  utilities.rs
crates/turndown/src/rules/: commonmark.rs  mod.rs  rule.rs
docs/adr/: 001-html-parser-wahl.md  002-ast-basierte-architektur.md  003-performance-optimierungen.md  004-napi-integration.md  README.md
tests/: jest.config.js  package.json  sync-tests.js
tests/parity/: parity.test.js
tests/upstream/: .turndown-version  turndown-test.js
