[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/sebastian-software/turndown-node"
authors = ["Sebastian Software GmbH"]

[workspace.dependencies]
turndown-core = { path = "crates/turndown-core", version = "0.0.10" }
thiserror = "2"

[profile.release]
lto = true
