[package]
name = "turndown-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Convert CDP-style DOM nodes to Markdown"
keywords = ["markdown", "turndown", "converter", "cdp", "dom"]
categories = ["text-processing", "web-programming"]
readme = "README.md"

[dependencies]
regex.workspace = true
once_cell.workspace = true
thiserror.workspace = true
indexmap.workspace = true
