[package]
name = "turndown-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
turndown-core = { path = "../turndown-core" }
tl = "0.7"
smallvec = "1.13"
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
